--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <div class="border-2 border-black">
           <img src="./campcamplogo.png" class="logo" alt="Camp camp logo" />
         </div>
-        <div class="bg-[url(/waves.jpg)] p-6 border-2 border-black md:w-full">
-          <p class="text-4xl p-5">
+        <div class="bg-[url(/waves.jpg)] p-8 border-2 border-black md:w-full">
+          <p class="text-4xl pt-9">
             a celebration of art, music
             and camp on Cayuga Lake
-
           </p>
         </div>
         <div class="border-2 border-black p-3 text-3xl">
@@ -36,9 +35,21 @@
         </div>
         <div>
           <ul>
-            <li class="border-2 border-black p-3 text-xl">SCHEDULE</li>
-            <li class="border-2 border-black p-3 text-xl">MAP</li>
-            <li class="border-2 border-black p-3 text-xl">FAQs</li>
+            <li class="border-2 border-black p-3 text-xl">
+              <p class="text-3xl">
+               SCHEDULE
+              </p>
+            </li>
+            <li class="border-2 border-black p-3 text-xl">
+              <p class="text-3xl">
+              MAP 
+              </p>
+            </li>
+            <li class="border-2 border-black p-3 text-xl">
+              <p class="text-3xl">
+              FAQs
+              </p>
+            </li>
           </ul>
         </div>
       </div>
