--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
               <p class="text-3xl">
               FAQs
               </p>
+              <p>
+                🏕️ Accommodations: We have use of the beautiful 34 acre Camp Gregory which includes lake access, a host of communal cabins and bunk beds with communal bathrooms. We can’t accommodate pets in the cabins. We welcome you to stay with us at the camp or come for the day!
+                <br><br>
+                🌯 Food: we will provide breakfast and dinner meals through the weekend with more information to come.
+                <br><br>
+                💸 Cost: $50-200 sliding scale suggested to cover cabin bunk bed and meals. We care most about you coming to Camp Camp so if cost is prohibitive let us know, or pay what you can.
+                <br><br>
+                🧳Packing: We will share a recommended list but think of anything you might need for a kids camp weekend: a bathing suit for end of summer lake dips, a sleeping bag, sunscreen.
+              </p>
             </li>
           </ul>
         </div>
