--- a/index.html
+++ b/index.html
@@ -37,13 +37,50 @@
           <ul>
             <li class="border-2 border-black p-3 text-xl">
               <p class="text-3xl">
-               SCHEDULE
+                SCHEDULE
               </p>
-            </li>
-            <li class="border-2 border-black p-3 text-xl">
-              <p class="text-3xl">
+              <p class="pt-3 text-2xl">
+                Friday, September 5:
+              </p>
+              <p>
+                2pm arrivals
+                <br>
+                5pm communal dinner
+                <br>
+                7pm fire
+                <br>
+                8pm DJ set
+                <br>
+              </p>
+              <p class="pt-3 text-2xl">
+                Saturday, September 6:
+              </p>
+              <p>
+                10am brunch
+                <br>
+                2pm botanical dyeing, giant puppets, inflatables, and watercraft
+                <br>
+                6pm dinner
+                <br>
+                8pm DJ sets
+                <br>
+              </p>
+              <p class="pt-3 text-2xl">
+                Sunday, September 7:
+              </p>
+              <p>
+                10am brunch
+                <br>
+                11am Closing remarks, cabins cleared
+                <br>
+                12-2pm Departures
+              </p>
+              </li>
+            <li class="border-2 border-black text-xl">
+              <p class="text-3xl p-3 border-b-2 border-black">
               MAP 
               </p>
+              <img src="./map_combined.png" class="w-full md:w-50"/>
             </li>
             <li class="border-2 border-black p-3 text-xl">
               <p class="text-3xl">
