--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <p class="text-3xl p-3 border-b-2 border-black">
               MAP 
               </p>
-              <img src="./map_combined.png" class="w-full md:w-50"/>
+              <img src="./map_combined.png" class="w-full md:w-1/2"/>
             </li>
             <li class="border-2 border-black p-3 text-xl">
               <p class="text-3xl">
