styling and adding information about the events

--- a/index.html
+++ b/index.html
@@ -86,14 +86,66 @@
               <p class="text-3xl">
               FAQs
               </p>
-              <p>
-                🏕️ Accommodations: We have use of the beautiful 34 acre Camp Gregory which includes lake access, a host of communal cabins and bunk beds with communal bathrooms. We can’t accommodate pets in the cabins. We welcome you to stay with us at the camp or come for the day!
+              <ul>
+                <li>
+                  <p class="text-2xl pt-3">🏕️ Accommodations: </p>
+                  <p class="text-l">
+                    We have use of the beautiful 34 acre Camp Gregory which includes lake access, a host of communal cabins and bunk
+                    beds
+                    with communal bathrooms. We can’t accommodate pets in the cabins. We welcome you to stay with us at the camp or come
+                    for the day!
+                  </p>
+                </li>
+                <li>
+                  <p class="text-2xl pt-3">🎨 Events: </p>
+                  <p class="text-l">
+                    Camp Camp is choose your own adventure, while you can attend any of the following you’re also welcome to take time
+                    at
+                    your own pace and rest in the camp woods or in the lake.
+                    See the schedule for a full detailed list.
+                  </p>
+                  <ul class="pl-6 list-disc">
+                    <li>
+                      Indigo Dyeing: With dye plants straight from Toy’s farm we will use a variety of techniques to pattern indigo dye!
+                      We will have yards of cotton or bring your own pre-washed cotton.
+                    </li>
+                    <li>
+                      Giant puppet making with Max and Eva
+                    </li>
+                    <li> Swimming in the lake </li>
+                    <li>
+                      Camp Camp After Hours – Saturday night party! A rager with sets by:
+                      River Rainne
+                      Jeff Pepsi
+                      Aparece
+                      @samraperofficial
+                    </li>
+                  </ul>
+                
+                </li>
+                
+                <li>
+                  <p class="text-2xl pt-3">🌯 Food: </p>
+                  <p class="text-l">
+                    we will provide breakfast and dinner meals through the weekend (see schedule for exact timings) along with snacks and lunch supplies 
+                  </p>
+                </li>
+                <li>
+                  <p class="text-2xl pt-3">💸 Cost: </p>
+                  <p class="text-l">
+                    $50-200 sliding scale suggested to cover cabin bunk bed and meals. We care most about you coming to Camp Camp so if
+                    cost is prohibitive let us know, or pay what you can.
+                  </p>
+                </li>
+                <li>
+                  <p class="text-2xl pt-3"> 🧳Packing: </p>
+                  <p class="text-l">We will share a recommended list but think of anything you might need for a kids camp weekend: a
+                    bathing suit for end of summer lake dips, a sleeping bag, sunscreen.
+                  </p>
+                </li>
+                </ul>
                 <br><br>
-                🌯 Food: we will provide breakfast and dinner meals through the weekend with more information to come.
                 <br><br>
-                💸 Cost: $50-200 sliding scale suggested to cover cabin bunk bed and meals. We care most about you coming to Camp Camp so if cost is prohibitive let us know, or pay what you can.
-                <br><br>
-                🧳Packing: We will share a recommended list but think of anything you might need for a kids camp weekend: a bathing suit for end of summer lake dips, a sleeping bag, sunscreen.
               </p>
             </li>
           </ul>
