added getting there section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                     beds
                     with communal bathrooms. We can’t accommodate pets in the cabins. We welcome you to stay with us at the camp or come
                     for the day!
+                    Be sure to fill out the <a href="https://forms.gle/uPQ5DgnjTHreKX346">survey</a> to make sure we can accommodate your dietary and other preferences and be sure you have a place to sleep!
+
                   </p>
                 </li>
                 <li>
@@ -115,10 +117,10 @@
                     <li> Swimming in the lake </li>
                     <li>
                       Camp Camp After Hours – Saturday night party! A rager with sets by:
-                      River Rainne
-                      Jeff Pepsi
-                      Aparece
-                      @samraperofficial
+                      <a href="https://www.instagram.com/yeah_right.get_real/">River Rainne</a>,
+                      <a href="https://www.instagram.com/jeremydlarson/">Jeff Pepsi</a>,
+                      <a href="https://www.instagram.com/kimberly.aparece/">Aparece</a>,
+                      <a href="https://www.instagram.com/samraperofficial/">Sam</a>
                     </li>
                   </ul>
                 
@@ -131,16 +133,43 @@
                   </p>
                 </li>
                 <li>
+                  <p class="text-2xl pt-3"> 🧳Packing: </p>
+                  <p class="text-l">We will have rustic bunk bed cabins so think of anything you might need for a kids camp weekend: a bathing suit for end of summer lake dips, a sleeping bag, sunscreen. Use the following list:
+                  </p>
+                  <ul class="list-disc pl-6">
+                    <li>Sleeping bag, pillow, </li>
+                    <li>Towel, toiletries </li>
+                    <li>Bathing suit </li>
+                    <li>Headlamp and/or flashlight </li>
+                    <li>warm socks, sweatshirt, and jammies for cool nights </li>
+                    <li>Rain shell in case </li>
+                    <li>(optional) Washed cotton/wool to dye with indigo </li>
+                    <li>(optional) camping chair to pull up by the fire and/or hammock </li>
+                    <li>BYOB – we will have plenty of food for meals and snacking, and a variety of beverages but feel free to bring your own </li>
+                    as well and we can store in the industrial fridge
+                    <li>A piece of art that you want to show! We can accommodate outdoor and indoor art! Reach out to Goldsam individually if </li>
+                    you want to install something!
+                  </ul>
+                </li>
+                <li>
+                  <p class="text-2xl pt-3">🚗 Getting There</p>
+                  <p class="text-l">Location: <a href="https://maps.app.goo.gl/VQx8TLV8png4uAoBA">1803 Lake Road, Aurora, NY, 13026</a></p>
+                  <p class="text-l pt-3">
+                    Carpooling: Carpooling is a great way to get here! Many of you are coming from NYC to Camp Camp and have a car or need
+                    a ride, so please feel free to use <a href="https://docs.google.com/spreadsheets/d/1btRgi6PLADYZ06Q7ZYh8FPScRglwYCH45KYAerQa_nQ/edit?gid=0#gid=0">this spreadsheet</a> to coordinate rides to and from the city with one another. There
+                    is parking on site.
+                    <br><br>
+                    Bus: There is a Megabus from NYC to Ithaca on Friday, September 5 10:00AM → 2:30PM (4:30 total trip), as well as a
+                    6:40 → 10:30PM bus.
+                    From Ithaca ubers and lyfts can be called and reach out to get a ride to and from the bus station
+                    <br><br>
+                  </p>
+                </li>
+                <li>
                   <p class="text-2xl pt-3">💸 Cost: </p>
                   <p class="text-l">
                     $50-200 sliding scale suggested to cover cabin bunk bed and meals. We care most about you coming to Camp Camp so if
                     cost is prohibitive let us know, or pay what you can.
-                  </p>
-                </li>
-                <li>
-                  <p class="text-2xl pt-3"> 🧳Packing: </p>
-                  <p class="text-l">We will share a recommended list but think of anything you might need for a kids camp weekend: a
-                    bathing suit for end of summer lake dips, a sleeping bag, sunscreen.
                   </p>
                 </li>
                 </ul>
