updates to schedule

--- a/index.html
+++ b/index.html
@@ -43,26 +43,30 @@
                 Friday, September 5:
               </p>
               <p>
-                2pm arrivals
+                2pm arrive and vibe by the lake
                 <br>
-                5pm communal dinner
+                5pm communal dinner - Thai
                 <br>
-                7pm fire
+                7pm fire and sunset hang
                 <br>
-                8pm DJ set
+                8pm music at the Lodge
                 <br>
               </p>
               <p class="pt-3 text-2xl">
                 Saturday, September 6:
               </p>
               <p>
-                10am brunch
+                10am brunch and choose your own adventure morning
                 <br>
-                2pm botanical dyeing, giant puppets, inflatables, and watercraft
+                1pm botanical dyeing, giant puppets, inflatables, and lake
                 <br>
-                6pm dinner
+                6pm dinner - Mexican
                 <br>
-                8pm DJ sets
+                7pm - ? 🎉 Camp Camp After Hours 🎉 with performances by 
+                      <a href="https://www.instagram.com/yeah_right.get_real/">River Rainne</a>,
+                      <a href="https://www.instagram.com/jeremydlarson/">Jeff Pepsi</a>,
+                      <a href="https://www.instagram.com/kimberly.aparece/">Aparece</a>,
+                      <a href="https://www.instagram.com/samraperofficial/">Sam</a>
                 <br>
               </p>
               <p class="pt-3 text-2xl">
