--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     a ride, so please feel free to use <a href="https://docs.google.com/spreadsheets/d/1btRgi6PLADYZ06Q7ZYh8FPScRglwYCH45KYAerQa_nQ/edit?gid=0#gid=0">this spreadsheet</a> to coordinate rides to and from the city with one another. There
                     is parking on site.
                     <br><br>
-                    Bus: There is a Megabus from NYC to Ithaca on Friday, September 5 10:00AM → 2:30PM (4:30 total trip), as well as a
+                    Bus: There is a <a href="https://us.megabus.com/journey-planner/journeys?originId=123&destinationId=511&totalPassengers=1">Megabus from NYC to Ithaca</a> on Friday, September 5 10:00AM → 2:30PM (4:30 total trip), as well as a
                     6:40 → 10:30PM bus.
                     From Ithaca ubers and lyfts can be called and reach out to get a ride to and from the bus station
                     <br><br>
