--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
                   </p>
                   <ul class="pl-6 list-disc">
                     <li>
-                      Indigo Dyeing: With dye plants straight from Toy’s farm we will use a variety of techniques to pattern indigo
-                      dye!
-                      We will have yards of cotton or bring your own pre-washed cotton.
+                      With dye plants straight from a local farm we will use a variety of techniques to pattern indigo dye! We will have
+                      yards of cotton or bring your own
                     </li>
                     <li>
                       Giant puppet making with Max and Eva
@@ -144,7 +143,7 @@
                   </p>
                   <div class="border-b-2 border-black p-3">
                     <p class="text-xl">42°42'31.82"N 76°41'54.42"W</p>
-              </div>
+                  </div>
               <img src="./map_combined.png" class="w-full md:w-1/2"/>
             </li>
             <li class="border-2 border-black p-3 text-xl">
