Don’t skew the logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="p-6">
       <div class="grid grid-cols-1">
         <div class="border-2 border-black">
-          <img src="./campcamplogo.png" class="logo" alt="Camp camp logo" />
+          <img src="./campcamplogo.png" width="342" height="195" class="logo" alt="Camp camp logo" />
         </div>
         <div class="bg-[url(/waves.jpg)] p-8 border-2 border-black md:w-full">
           <p class="text-4xl pt-9">
