Link to google maps for camp greg

--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
                     MAP
                   </p>
                   <div class="border-b-2 border-black p-3">
-                    <p class="text-xl">42°42'31.82"N 76°41'54.42"W</p>
+                    <p class="text-xl">
+                      <a href="https://maps.app.goo.gl/bVT78br8arWZkWvy9">42°42'31.82"N 76°41'54.42"W</a>
+                    </p>
                   </div>
               <img src="./map_combined.png" class="w-full md:w-1/2"/>
             </li>
