--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <p class="text-l">We will have rustic bunk bed cabins so think of anything you might need for a kids camp weekend: a bathing suit for end of summer lake dips, a sleeping bag, sunscreen. Use the following list:
                   </p>
                   <ul class="list-disc pl-6">
-                    <li>Sleeping bag, pillow, </li>
+                    <li>Sleeping bag, pillow</li>
                     <li>Towel, toiletries </li>
                     <li>Bathing suit </li>
                     <li>Headlamp and/or flashlight </li>
