Making all the subheads the same

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   </ul>
                 </li>
                 <li>
-                  <p class="text-2xl pt-3">🚗 Getting There</p>
+                  <p class="text-2xl pt-3">🚗 Getting There: </p>
                   <p class="text-l">Location: <a href="https://maps.app.goo.gl/VQx8TLV8png4uAoBA">1803 Lake Road, Aurora, NY, 13026</a></p>
                   <p class="text-l pt-3">
                     Carpooling: Carpooling is a great way to get here! Many of you are coming from NYC to Camp Camp and have a car or need
